better UI for resources

--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -34,6 +34,72 @@
             <script src="https://unpkg.com/@trevoreyre/autocomplete-js"></script>
         {% endif %}
     {% endblock %}
+
+    {% if jsonschema is defined %}
+
+      {% set extras = h.jsonschema_resolve_resource_extras(dataset_type, data) %}
+
+      {% set TYPE_KEY = h.jsonschema_get_type_key() %}
+      {% set BODY_KEY = h.jsonschema_get_body_key() %}
+      {% set OPT_KEY = h.jsonschema_get_opt_key() %}
+      {% set VERSION_KEY = h.jsonschema_get_version_key() %}
+
+
+      {% set schema_type = extras[TYPE_KEY] %}
+      {% set body = extras[BODY_KEY] %}
+      {% set opt = extras[OPT_KEY] %}
+      {% set version = extras[VERSION_KEY] %}
+
+      {% set schema = h.jsonschema_get_schema(schema_type) %}
+      
+      <div class="input-group">
+        <input id="field-extras-0-value" name="{{BODY_KEY}}" value="{{body}}" type="hidden" class="form-control"/>
+      
+        <label for="field-{{TYPE_KEY}}">Which type </label>
+        <select id="field-{{TYPE_KEY}}" name="{{TYPE_KEY}}"  onChange="jsonschema.reload(value, editor = true, keep_old = false);">
+          {% for resource_type in resource_types %}
+            {% if resource_type == schema_type %}
+              <option value="{{ resource_type }}" selected>{{ resource_type }}</option>
+            {% else %}
+              <option value="{{ resource_type }}" >{{ resource_type }}</option>
+            {% endif %}
+          {% endfor %}
+        </select>
+        <!-- <input id="field-extras-1-value" name="{{TYPE_KEY}}" value={{schema_type}} type="hidden" class="form-control"/> -->
+      
+        <input id="field-{{OPT_KEY}}" name="{{OPT_KEY}}" value="{{opt}}" type="hidden" class="form-control"/>
+      
+        <input id="field-{{VERSION_KEY}}" name="{{VERSION_KEY}}" value="{{version}}" type="hidden" class="form-control"/>
+      </div>
+      
+      <div id="jsonschema-config-form" data-module="jsonschema"
+        data-module-opt = "{{ opt }}"
+        data-module-schema = "{{ schema }}"
+        data-module-body = "{{ body }}"
+        data-module-version = "{{ version }}"
+        data-module-type = "{{ schema_type }}"
+        data-module-ckan-url = "{{ h.url_for('/',_external=True) }}"/>
+      
+      <div id="editor">
+        <p>
+            <div style="display: inline-block;">
+                <button class="btn btn-primary" id="editor-editor" onclick="jsonschema.getEditorAce();">Editor</button>
+                <button class="btn btn-primary" id="editor-howto" onclick="jsonschema.getEditor();">HowTo</button>
+                <button class="btn btn-primary" id="editor-toggle" onclick="jsonschema.editorToggle();"></button>
+            </div>
+        </p>
+        <!-- <p style="border: 2px solid gray;" id="editor-jsonschema-config"> -->
+        <div id="editor-jsonschema-config">
+            {% resource 'ckanext-jsonschema/main' %}
+        </div>
+        <p>
+            <div style="border-bottom: 1px solid gray;">
+                Status: <b style="display: inline;" id="editor-status-holder"></b>    Validation: <div style="display: inline;" id="editor-error-holder"></div>
+            </div>
+        </p>
+      </div>
+    {% endif %}
+
     {% block basic_fields_url %}
         {{super()}}
     {% endblock %}
@@ -45,89 +111,7 @@
 {% endblock %}
 
 {% block metadata_fields %}
-  {% if jsonschema is defined %}
-
-{#
-<!-- 
-    {% set TYPE_KEY = h.jsonschema_get_type_key() %}
-    {% set BODY_KEY = h.jsonschema_get_body_key() %}
-    {% set OPT_KEY = h.jsonschema_get_opt_key() %}
-    {% set VERSION_KEY = h.jsonschema_get_version_key() %}
-
-    {% if data[TYPE_KEY] is defined %}
-      {% set schema_type = data[TYPE_KEY] %}
-      {% set body = data[BODY_KEY] %}
-    {% else %}
-      {% set schema_type = resource_types[0] %}
-      {% set body = h.jsonschema_get_template(schema_type) %}
-    {% endif %}
-
-    {% set opt = data[OPT_KEY] %}
-    {% set version = data[VERSION_KEY] %} -->
-#}
-
-    {% set extras = h.jsonschema_resolve_resource_extras(dataset_type, data) %}
-
-    {% set TYPE_KEY = h.jsonschema_get_type_key() %}
-    {% set BODY_KEY = h.jsonschema_get_body_key() %}
-    {% set OPT_KEY = h.jsonschema_get_opt_key() %}
-    {% set VERSION_KEY = h.jsonschema_get_version_key() %}
-
-
-    {% set schema_type = extras[TYPE_KEY] %}
-    {% set body = extras[BODY_KEY] %}
-    {% set opt = extras[OPT_KEY] %}
-    {% set version = extras[VERSION_KEY] %}
-
-    {% set schema = h.jsonschema_get_schema(schema_type) %}
-    
-    <div class="input-group">
-      <input id="field-extras-0-value" name="{{BODY_KEY}}" value="{{body}}" type="hidden" class="form-control"/>
-    
-      <label for="field-{{TYPE_KEY}}">Which type </label>
-      <select id="field-{{TYPE_KEY}}" name="{{TYPE_KEY}}"  onChange="jsonschema.reload(value, editor = true, keep_old = false);">
-        {% for resource_type in resource_types %}
-          {% if resource_type == schema_type %}
-            <option value="{{ resource_type }}" selected>{{ resource_type }}</option>
-          {% else %}
-            <option value="{{ resource_type }}" >{{ resource_type }}</option>
-          {% endif %}
-        {% endfor %}
-      </select>
-      <!-- <input id="field-extras-1-value" name="{{TYPE_KEY}}" value={{schema_type}} type="hidden" class="form-control"/> -->
-    
-      <input id="field-{{OPT_KEY}}" name="{{OPT_KEY}}" value="{{opt}}" type="hidden" class="form-control"/>
-    
-      <input id="field-{{VERSION_KEY}}" name="{{VERSION_KEY}}" value="{{version}}" type="hidden" class="form-control"/>
-    </div>
-    
-    <div id="jsonschema-config-form" data-module="jsonschema"
-      data-module-opt = "{{ opt }}"
-      data-module-schema = "{{ schema }}"
-      data-module-body = "{{ body }}"
-      data-module-version = "{{ version }}"
-      data-module-type = "{{ schema_type }}"
-      data-module-ckan-url = "{{ h.url_for('/',_external=True) }}"/>
-    
-    <div id="editor">
-      <p>
-          <div style="display: inline-block;">
-              <button class="btn btn-primary" id="editor-editor" onclick="jsonschema.getEditorAce();">Editor</button>
-              <button class="btn btn-primary" id="editor-howto" onclick="jsonschema.getEditor();">HowTo</button>
-              <button class="btn btn-primary" id="editor-toggle" onclick="jsonschema.editorToggle();"></button>
-          </div>
-      </p>
-      <!-- <p style="border: 2px solid gray;" id="editor-jsonschema-config"> -->
-      <div id="editor-jsonschema-config">
-          {% resource 'ckanext-jsonschema/main' %}
-      </div>
-      <p>
-          <div style="border-bottom: 1px solid gray;">
-              Status: <b style="display: inline;" id="editor-status-holder"></b>    Validation: <div style="display: inline;" id="editor-error-holder"></div>
-          </div>
-      </p>
-    </div>
-  {% else %}
+  {% if jsonschema is undefined %}
     {{super()}}
   {% endif %}
 {% endblock %}
