introduce a working draft of the importer. Fixes the OPT body management (was serialized as string and escaped multiple times)

--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -67,7 +67,7 @@
         </select>
         <!-- <input id="field-extras-1-value" name="{{TYPE_KEY}}" value={{schema_type}} type="hidden" class="form-control"/> -->
       
-        <input id="field-{{OPT_KEY}}" name="{{OPT_KEY}}" value="{{opt}}" type="hidden" class="form-control"/>
+        <input id="field-{{OPT_KEY}}" name="{{OPT_KEY}}" value={{opt}} type="hidden" class="form-control"/>
       
         <input id="field-{{VERSION_KEY}}" name="{{VERSION_KEY}}" value="{{version}}" type="hidden" class="form-control"/>
       </div>
