--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -50,16 +50,16 @@
       
       <div class="input-group">
         <input id="field-extras-0-key" name="extras__0__key" value="{{BODY_KEY}}" type="hidden" />
-        <input id="field-extras-0-value" name="extras__0__value" value="{{body}}" type="hidden" class="form-control"/>
+        <input id="field-extras-0-value" name="extras__0__value" value={{body}} type="hidden" class="form-control"/>
       
         <input id="field-extras-1-key" name="extras__1__key" value="{{TYPE_KEY}}" type="hidden" />
         <input id="field-extras-1-value" name="extras__1__value" value={{schema_type}} type="hidden" class="form-control"/>
       
         <input id="field-extras-2-key" name="extras__2__key" value="{{OPT_KEY}}" type="hidden" />
-        <input id="field-extras-2-value" name="extras__2__value" value="{{opt}}" type="hidden" class="form-control"/>
+        <input id="field-extras-2-value" name="extras__2__value" value={{opt}} type="hidden" class="form-control"/>
       
         <input id="field-extras-3-key" name="extras__3__key" value="{{VERSION_KEY}}" type="hidden" />
-        <input id="field-extras-3-value" name="extras__3__value" value="{{version}}" type="hidden" class="form-control"/>
+        <input id="field-extras-3-value" name="extras__3__value" value={{version}} type="hidden" class="form-control"/>
       </div>
 
       <div id="jsonschema-config-form" data-module="jsonschema"
