--- a/ckanext/jsonschema/templates/source/read.html
+++ b/ckanext/jsonschema/templates/source/read.html
@@ -3,6 +3,27 @@
 {% set pkg = c.pkg_dict %}
 
 
+
+{% macro render_nested(json, key) -%}
+<table>
+  {% if json.get(key) %}
+    {% for key, value in json.get(key).items() recursive %}
+      {% if value is mapping %}
+        {{ loop(value.items()) }}
+      {% else %}
+        <tr>
+          <td>{{ key }}</td> 
+          <td>{{ value }}</td>
+        </tr>
+      {% endif %}
+    {% endfor %}
+  {% else %}
+    <p>None</p>
+  {% endif %}
+</table>
+{%- endmacro %}
+
+
 {% set extras = h.jsonschema_resolve_extras(pkg, True) %}
 
 {% set TYPE_KEY = h.jsonschema_get_type_key() %}
@@ -65,6 +86,9 @@
   {% block package_tags %}
     {% snippet "package/snippets/tags.html", tags=pkg.tags %}
   {% endblock %}
+
+
+  {{ render_nested(extras,BODY_KEY) }}
 
   {% block package_additional_info %}
     {% snippet "package/snippets/additional_info.html", pkg_dict=pkg %}
