refine requirements.txt

--- a/ckanext/jsonschema/templates/source/read.html
+++ b/ckanext/jsonschema/templates/source/read.html
@@ -101,7 +101,7 @@
     {{ render_json(extras[BODY_KEY]) }}
   </p>
 
-  {% if extras[OPT_KEY]) %}
+  {% if extras[OPT_KEY] %}
   <p>
     <h3>Options:</h3>
     {{ render_json(extras[OPT_KEY]) }}
