--- a/ckanext/jsonschema/templates/source/read.html
+++ b/ckanext/jsonschema/templates/source/read.html
@@ -92,7 +92,7 @@
 
   {% for r in pkg.resources %} 
     {# set resource = h.jsonschema_resolve_resource_extras(schema_type, r, True) #}
-    {% if r.format in ['PNG','JPG'] and r.url %}
+    {% if r.format in ['PNG','JPG','JPEG'] and r.url %}
     <p>
       <h3>{{r.title}}</h3>
       <image src="{{r.url}}" style="width:80%;display:block;margin-left:auto;margin-right:auto;"\>
