make description more fault tolerant

--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -7,7 +7,7 @@
 {{dataIdentification.abstract}}
 {% endif %}
 
-{% if dataIdentification.citation.dates %}
+{% if dataIdentification.citation and dataIdentification.citation.dates %}
 	{% for date in dataIdentification.citation.dates  %}
 Data {{date ['dateType']}}: {{ date['date'] }}
 	{% endfor %}
