--- a/ckanext/jsonschema/templates/source/importer.html
+++ b/ckanext/jsonschema/templates/source/importer.html
@@ -6,7 +6,7 @@
 {% set OPT_KEY = h.jsonschema_get_opt_key() %}
 {% set VERSION_KEY = h.jsonschema_get_version_key() %}
 
-<form id="importer" action={{ h.url_for('/api/action/jsonschema_importer', _external=True) }} class="form-horizontal dataset-form" method="post">
+<form id="importer" enctype="multipart/form-data" action={{ h.url_for('/api/action/jsonschema_importer', _external=True) }} class="form-horizontal dataset-form" method="post">
     <p>
         <span class="info-block">
             {{ _('This should include the http:// part of the URL') }}
