iso description fail fast and improvements, added better date picker to jsonschema-editor

--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -25,6 +25,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ajv/8.1.0/ajv7.min.js" integrity="sha512-iG/rBFw+Q1mlDQt15pw86zil1/1JeeNoJ1Grux8zZgvIBLDDnRLdA8UaIosHohzrqBEXA2+hIQV7DXnYGYGX/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- autocomplete -->
         <script src="https://unpkg.com/@trevoreyre/autocomplete-js"></script>
+
+        <!-- Date picker -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
       {% endif %}
     {% endblock %}  
 
