--- a/ckanext/jsonschema/templates/source/read.html
+++ b/ckanext/jsonschema/templates/source/read.html
@@ -64,10 +64,9 @@
 <div>
   <div style="width:90%;display: flex;margin-left:auto;margin-right:auto;justify-content: space-evenly;">
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#type" aria-expanded="false" aria-controls="type">Type</button>
-    <a class="btn btn-primary" data-toggle="collapse" href="#body" role="button" aria-expanded="false" aria-controls="body">Full Metadata</a>
+    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#body" aria-expanded="false" aria-controls="body">Full Metadata</button>
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#opt" aria-expanded="false" aria-controls="opt">Options</button>
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#version" aria-expanded="false" aria-controls="version">Version</button>
-    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="body type opt version">All</button>
   </div>
   <div class="col">
     <div class="row">
