--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -20,15 +20,19 @@ Data {{date ['dateType']}}: {{ date['date'] }}
 	
 {% endif %}
 
-**Contact points :**
+**Contact points:**
 {% for resource in resources %}
 	{% set resource_type = h.jsonschema_get_resource_type(resource) %}
-	{% if resource_type == 'resource-contact' %}
+	{% if resource_type == 'resource-contact' or
+			resource_type == 'resource-maintainer' or
+				resource_type == 'point-of-contact' or
+				resource_type == 'metadata-contact' or
+				resource_type == 'cited-responsible-party' %}
 		{% set contact = h.jsonschema_get_resource_body(resource) %}
 		{% if contact.contactInfo %}
 			{% if contact.contactInfo.address
 				and contact.contactInfo.address.electronicMailAddress %}
-{{contact.role|capitalize}} : [{{contact.individualName}}]({{'mailto:'+contact.contactInfo.address.electronicMailAddress}}) {{contact.organisationName}}
+{{contact.role|capitalize}} : [{{contact.individualName}}](mailto:{{contact.contactInfo.address.electronicMailAddress}}) {{contact.organisationName}}
 			{% else %}
 {{contact.role|capitalize}} : {{contact.individualName}} {{contact.organisationName}}
 			{% endif %}
@@ -39,6 +43,7 @@ Data {{date ['dateType']}}: {{ date['date'] }}
 {% if dataIdentification.citation and 
 	dataIdentification.citation.series and
 		dataIdentification.citation.series.otherCitationDetails %}
+
 **Citation:**
 
 {{ dataIdentification.citation.series.otherCitationDetails }}
@@ -46,28 +51,27 @@ Data {{date ['dateType']}}: {{ date['date'] }}
 {% endif %}
 
 {% if dataIdentification.resourceConstraints %}
-{% if dataIdentification.resourceConstraints.otherConstraints %}
+	{% if dataIdentification.resourceConstraints.otherConstraints %}
 **Resource constraints:**
 
-	{% for constraint in dataIdentification.resourceConstraints  %}
+		{% for constraint in dataIdentification.resourceConstraints  %}
 
 {{constraints}}
 
-	{% endfor %}
-{% endif %}
+		{% endfor %}
+	{% endif %}
 {% endif %}
 
-**Online resources:**
 {% if resources %}
-	{% for resource in resources  %}
-	{% set resource_type = h.jsonschema_get_resource_type(resource) %}
-	{% if resource_type=='online-resource' %}
+**Online resources:**
+	{% for resource in resources %}
+		{% set resource_type = h.jsonschema_get_resource_type(resource) %}
+		{% if resource_type == 'online-resource' %}
 			{% set body = h.jsonschema_get_resource_body(resource) %}
-			{% if body.protocol=='WWW:LINK-1.0-http--link' %}
-[{{resource.title or resource.name or resource.description or resource.url}}]({{resource.url}})
-			{% endif %}
-			{% if body.protocol=='WWW:Download-1.0-http-download' %}
-[{{resource.title or resource.name or resource.description or resource.url}}]({{resource.url}})
+			{% if body.protocol == 'WWW:LINK-1.0-http--link' %}
+[{{resource.description or resource.name}}]({{resource.url}})
+			{% elif body.protocol == 'WWW:Download-1.0-http-download' %}
+[{{resource.description or resource.name}}]({{resource.url}})
 			{% endif %}
 		{% endif %}
 	{% endfor %}
