--- a/ckanext/jsonschema/templates/package/resource_read.html
+++ b/ckanext/jsonschema/templates/package/resource_read.html
@@ -13,44 +13,82 @@
   {% block resource_additional_information %}
     {{super()}}
     {% if res %}
+    <p>
       <section class="module">
         {% block resource_additional_information_inner %}
         {% endblock %}
         {% if jsonschema is defined %}
-          {% set extras = h.jsonschema_resolve_resource_extras(dataset_type, res, True) %}
+  
+          {% set body = h.jsonschema_get_resource_body(res) %}
 
-          {% set TYPE_KEY = h.jsonschema_get_type_key() %}
-          {% set BODY_KEY = h.jsonschema_get_body_key() %}
-          {% set OPT_KEY = h.jsonschema_get_opt_key() %}
-          {% set VERSION_KEY = h.jsonschema_get_version_key() %}
+          {% set schema_type = h.jsonschema_get_resource_type(res) %}
 
-          {% set schema_type = extras[TYPE_KEY] %}
-          {% set body = extras[BODY_KEY] %}
-          {% set opt = extras[OPT_KEY] %}
-          {% set version = extras[VERSION_KEY] %}
+          {% set opt = h.jsonschema_get_resource_opt(res) %}
 
-          
-          {% set schema = h.jsonschema_get_schema(schema_type) %}
-          {% if schema_type %}
+          {% set version = h.jsonschema_get_resource_version(res) %}
           <p>
-            <h3>Type:</h3>
-            {{ schema_type }}
+            <div>
+              <div style="width:90%;display: flex;margin-left:auto;margin-right:auto;justify-content: space-evenly;">
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#type" aria-expanded="false" aria-controls="type">Type</button>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#body" aria-expanded="true" aria-controls="body">Full Metadata</button>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#opt" aria-expanded="false" aria-controls="opt">Options</button>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#version" aria-expanded="false" aria-controls="version">Version</button>
+              </div>
+              <div class="col">
+                <div class="row">
+                  <div class="collapse" id="type">
+                    <div class="card card-body">
+                      {% if schema_type %}
+                      <p>
+                        <h3>Type:</h3>
+                        {{ schema_type }}
+                      </p>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="" id="body">
+                    <div class="card card-body">          
+                    {% if body %}
+                    <p>
+                      <h3>Metadata:</h3>
+                      {{ reader.render_json(body) }}
+                    </p>
+                    {% endif %}
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="collapse" id="opt">
+                    <div class="card card-body">
+                      {% if opt %}
+                      <p>
+                        <h3>Options:</h3>
+                        {{ reader.render_json(opt) }}
+                      </p>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="collapse" id="version">
+                    <div class="card card-body">
+                      {% if version %}
+                      <p>
+                        <h3>Version:</h3>
+                        {{ version }}
+                      </p>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </p>
-          {% endif %}
-          {% if body %}
-          <p>
-            <h3>Metadata:</h3>
-            {{ reader.render_json(body) }}
-          </p>
-          {% endif %}
-          {% if opt %}
-          <p>
-            <h3>Options:</h3>
-            {{ reader.render_json(opt) }}
-          </p>
-          {% endif %}
         {% endif %}
       </section>
     {% endif %}
+    </p>
   {% endblock %}
 {% endblock %}
